--- a/src/main/resources/templates/students.html
+++ b/src/main/resources/templates/students.html
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="layout/layout"
+      xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+      xsi:schemaLocation="http://www.ultraq.net.nz/thymeleaf/layout ">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Title</title>
 </head>
 <body>
-$END$
+<th:block th:each="student : ${students}">
+    <p th:text="${student.name}"/>
+    <p th:text="${student.lastName}"/>
+    <p th:text="${student.level}"/>
+
+
+
+
+
+</th:block>
+
 </body>
 </html>
