--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -24,7 +24,7 @@
         </div>
         <div>
         <label for="password">password</label>
-        <input  id = "password" type = "text" th:field="*{password}">
+        <input  id = "password" type = "password" th:field="*{password}">
         </div>
 
 <button type = "submit" >Submit</button>
