registration/s, refactoring, 37 question do Mocker.java

--- a/src/main/resources/templates/questions.html
+++ b/src/main/resources/templates/questions.html
@@ -10,8 +10,12 @@
     </head>
     <body>
     <th:block th:each="question : ${questions}">
+        <p th:text="${question.name}"/>
         <p th:text="${question.text}"/>
-        <p th:text="${question.level}"/>
+        <p th:text="${question.answer1}"/>
+        <p th:text="${question.answer2}"/>
+        <p th:text="${question.answer3}"/>
+        <p th:text="${question.answer4}"/>
     </th:block>
     </body>
 </html>
