--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="layout/layout"
+      xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+      xsi:schemaLocation="http://www.ultraq.net.nz/thymeleaf/layout ">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -8,48 +13,8 @@
     <title>Menu</title>
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-light bg-dark">
-    <!-- Navbar content -->
+<th:block th:include="header::header"></th:block>
 
-    <a class="navbar-brand" href="#" style="color: chartreuse">Learn Java</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-            <li class="nav-item active">
-                <a class="nav-link" href="#" style="color: deeppink;">Zaloguj<span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item active">
-                <a class="nav-link" href="#" style="color: yellow;">Zarejestruj<span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#" style="color: red;">Quiz</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#" style="color: blue;">Książki</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#" style="color: orange">Blogi</a>
-            </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" style="color: white" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Menu rozwijane
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">Zaloguj</a>
-                    <a class="dropdown-item" href="#">Zarejestruj</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Quiz</a>
-                    <a class="dropdown-item" href="#">Książki</a>
-                    <a class="dropdown-item" href="#">Blogi</a>
-                </div>
-            </li>
-
-        </ul>
-
-    </div>
-</nav>
 <div class="container">
     <span style="font-size: 50px;" > Learn Java!</span>
     <div style="border-style: double; padding: 10px;margin-right: 30px;
