--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -24,19 +24,19 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#" style="color: deeppink;">Zaloguj<span class="sr-only">(current)</span></a>
+                    <a class="nav-link" th:href="@{/login}" style="color: deeppink;">Zaloguj<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="#" style="color: yellow;">Zarejestruj<span class="sr-only">(current)</span></a>
+                    <a class="nav-link" th:href="@{/registration}" style="color: yellow;">Zarejestruj<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#" style="color: red;">Quiz</a>
+                    <a class="nav-link" th:href="@{/quiz}" style="color: red;">Quiz</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#" style="color: blue;">Książki</a>
+                    <a class="nav-link" th:href="@{/books}" style="color: lightskyblue;">Książki</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#" style="color: orange">Blogi</a>
+                    <a class="nav-link" th:href="@{/blogs}" style="color: orange">Linki</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" style="color: white" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
