books.htlm, Mocker, game.html, navbar CSS do wszystkich, reformating

--- a/src/main/resources/templates/addquestion.html
+++ b/src/main/resources/templates/addquestion.html
@@ -1,48 +1,63 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-<div class="container">
+    <head>
+        <meta charset="UTF-8">
+        <title>Books</title>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+              integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+              crossorigin="anonymous">
+    </head>
+    <body>
+    <th:block th:include="header::header"></th:block>
 
-</div>
-<form th:action="@{/admin/addquestion}" th:object="${questionDTO}" method="post">
-    <div>
-        <label for="name">name</label>
-        <input id="name" type="text" th:field="*{name}">
-    </div>
-    <div>
-        <label for="text">text</label>
-        <input id="text" type="text" th:field="*{text}">
-    </div>
-    <div>
-        <label for="level">level</label>
-        <input id="level" type="number" th:field="*{level}">
-    </div>
-    <div>
-        <label for="answer1">answer1</label>
-        <input id="answer1" type="text" th:field="*{answer1}">
-    </div>
-    <div>
-        <label for="answer2">answer2</label>
-        <input id="answer2" type="text" th:field="*{answer2}">
-    </div>
-    <div>
-        <label for="answer3">answer3</label>
-        <input id="answer3" type="text" th:field="*{answer3}">
-    </div>
-    <div>
-        <label for="answer4">answer4</label>
-        <input id="answer4" type="text" th:field="*{answer4}">
-    </div>
-    <div>
-        <label for="correctAnswer">correctAnswer</label>
-        <input id="correctAnswer" type="text" th:field="*{correctAnswer}">
-    </div>
+    <div class="container">
 
-    <button type="submit">Submit</button>
-</form>
-</body>
+    </div>
+    <form th:action="@{/admin/addquestion}" th:object="${questionDTO}" method="post">
+        <div>
+            <label for="name">name</label>
+            <input id="name" type="text" th:field="*{name}">
+        </div>
+        <div>
+            <label for="text">text</label>
+            <input id="text" type="text" th:field="*{text}">
+        </div>
+        <div>
+            <label for="level">level</label>
+            <input id="level" type="number" th:field="*{level}">
+        </div>
+        <div>
+            <label for="answer1">answer1</label>
+            <input id="answer1" type="text" th:field="*{answer1}">
+        </div>
+        <div>
+            <label for="answer2">answer2</label>
+            <input id="answer2" type="text" th:field="*{answer2}">
+        </div>
+        <div>
+            <label for="answer3">answer3</label>
+            <input id="answer3" type="text" th:field="*{answer3}">
+        </div>
+        <div>
+            <label for="answer4">answer4</label>
+            <input id="answer4" type="text" th:field="*{answer4}">
+        </div>
+        <div>
+            <label for="correctAnswer">correctAnswer</label>
+            <input id="correctAnswer" type="text" th:field="*{correctAnswer}">
+        </div>
+
+        <button type="submit">Submit</button>
+    </form>
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+            crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+            crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+            crossorigin="anonymous"></script>
+    </body>
 </html>
