--- a/src/main/resources/templates/game.html
+++ b/src/main/resources/templates/game.html
@@ -6,141 +6,154 @@
       xsi:schemaLocation="http://www.ultraq.net.nz/thymeleaf/layout ">
     <head>
         <meta charset="UTF-8">
-        <title>Game</title>
+        <title>Books</title>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+              integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+              crossorigin="anonymous">
     </head>
     <body>
-    <fieldset>
-        <legend th:text="${questions[0].text}"></legend>
-        <ul>
-            <li>
-                <input type="radio" th:field="${quizAnswerDTO.simpleAnswers[0].answer}"
-                       th:value="${questions[0].answer1}"/>
-                <label th:for="${questions[0].answer1}" th:text="${questions[0].answer1}"></label>
-            </li>
-            <li>
-                <input type="radio" th:field="${quizAnswerDTO.simpleAnswers[0].answer}"
-                       th:value="${questions[0].answer2}"/>
-                <label th:for="${questions[0].answer2}" th:text="${questions[0].answer2}"></label>
-            </li>
-            <li>
-                <input type="radio" th:field="${quizAnswerDTO.simpleAnswers[0].answer}"
-                       th:value="${questions[0].answer3}"/>
-                <label th:for="${questions[0].answer3}" th:text="${questions[0].answer3}"></label>
-            </li>
-            <li>
-                <input type="radio" th:field="${quizAnswerDTO.simpleAnswers[0].answer}"
-                       th:value="${questions[0].answer4}"/>
-                <label th:for="${questions[0].answer4}" th:text="${questions[0].answer4}"></label>
-            </li>
-        </ul>
-    </fieldset>
-    <fieldset>
-        <legend th:text="${questions[1].text}"></legend>
-        <ul>
-            <li>
-                <input type="radio" th:field="${quizAnswerDTO.simpleAnswers[1].answer}"
-                       th:value="${questions[1].answer1}"/>
-                <label th:for="${questions[1].answer1}" th:text="${questions[1].answer1}"></label>
-            </li>
-            <li>
-                <input type="radio" th:field="${quizAnswerDTO.simpleAnswers[1].answer}"
-                       th:value="${questions[1].answer2}"/>
-                <label th:for="${questions[1].answer2}" th:text="${questions[1].answer2}"></label>
-            </li>
-            <li>
-                <input type="radio" th:field="${quizAnswerDTO.simpleAnswers[1].answer}"
-                       th:value="${questions[1].answer3}"/>
-                <label th:for="${questions[1].answer3}" th:text="${questions[1].answer3}"></label>
-            </li>
-            <li>
-                <input type="radio" th:field="${quizAnswerDTO.simpleAnswers[1].answer}"
-                       th:value="${questions[1].answer4}"/>
-                <label th:for="${questions[1].answer4}" th:text="${questions[1].answer4}"></label>
-            </li>
-        </ul>
-    </fieldset>
+    <th:block th:include="header::header"></th:block>
+    <form th:action="@{/quiz/game}" th:object="${quizAnswerDTO}" method="post">
+        <fieldset>
+            <legend th:text="${questions[0].text}"></legend>
+            <ul style="list-style-type: none;">
+                <li>
+                    <input type="radio" th:field="${quizAnswerDTO.simpleAnswers[0].answer}"
+                           th:value="${questions[0].answer1}"/>
+                    <label th:for="${questions[0].answer1}" th:text="${questions[0].answer1}"></label>
+                </li>
+                <li>
+                    <input type="radio" th:field="${quizAnswerDTO.simpleAnswers[0].answer}"
+                           th:value="${questions[0].answer2}"/>
+                    <label th:for="${questions[0].answer2}" th:text="${questions[0].answer2}"></label>
+                </li>
+                <li>
+                    <input type="radio" th:field="${quizAnswerDTO.simpleAnswers[0].answer}"
+                           th:value="${questions[0].answer3}"/>
+                    <label th:for="${questions[0].answer3}" th:text="${questions[0].answer3}"></label>
+                </li>
+                <li>
+                    <input type="radio" th:field="${quizAnswerDTO.simpleAnswers[0].answer}"
+                           th:value="${questions[0].answer4}"/>
+                    <label th:for="${questions[0].answer4}" th:text="${questions[0].answer4}"></label>
+                </li>
+            </ul>
+        </fieldset>
+        <fieldset>
+            <legend th:text="${questions[1].text}"></legend>
+            <ul style="list-style-type: none;">
+                <li>
+                    <input type="radio" th:field="${quizAnswerDTO.simpleAnswers[1].answer}"
+                           th:value="${questions[1].answer1}"/>
+                    <label th:for="${questions[1].answer1}" th:text="${questions[1].answer1}"></label>
+                </li>
+                <li>
+                    <input type="radio" th:field="${quizAnswerDTO.simpleAnswers[1].answer}"
+                           th:value="${questions[1].answer2}"/>
+                    <label th:for="${questions[1].answer2}" th:text="${questions[1].answer2}"></label>
+                </li>
+                <li>
+                    <input type="radio" th:field="${quizAnswerDTO.simpleAnswers[1].answer}"
+                           th:value="${questions[1].answer3}"/>
+                    <label th:for="${questions[1].answer3}" th:text="${questions[1].answer3}"></label>
+                </li>
+                <li>
+                    <input type="radio" th:field="${quizAnswerDTO.simpleAnswers[1].answer}"
+                           th:value="${questions[1].answer4}"/>
+                    <label th:for="${questions[1].answer4}" th:text="${questions[1].answer4}"></label>
+                </li>
+            </ul>
+        </fieldset>
 
-    <fieldset>
-    <legend th:text="${questions[2].text}"></legend>
-    <ul>
-        <li>
-            <input type="radio" th:field="${quizAnswerDTO.simpleAnswers[2].answer}"
-                   th:value="${questions[2].answer1}"/>
-            <label th:for="${questions[2].answer1}" th:text="${questions[2].answer1}"></label>
-        </li>
-        <li>
-            <input type="radio" th:field="${quizAnswerDTO.simpleAnswers[2].answer}"
-                   th:value="${questions[2].answer2}"/>
-            <label th:for="${questions[2].answer2}" th:text="${questions[2].answer2}"></label>
-        </li>
-        <li>
-            <input type="radio" th:field="${quizAnswerDTO.simpleAnswers[2].answer}"
-                   th:value="${questions[2].answer3}"/>
-            <label th:for="${questions[2].answer3}" th:text="${questions[2].answer3}"></label>
-        </li>
-        <li>
-            <input type="radio" th:field="${quizAnswerDTO.simpleAnswers[2].answer}"
-                   th:value="${questions[2].answer4}"/>
-            <label th:for="${questions[2].answer4}" th:text="${questions[2].answer4}"></label>
-        </li>
-    </ul>
-    </fieldset>
+        <fieldset>
+            <legend th:text="${questions[2].text}"></legend>
+            <ul style="list-style-type: none;">
+                <li>
+                    <input type="radio" th:field="${quizAnswerDTO.simpleAnswers[2].answer}"
+                           th:value="${questions[2].answer1}"/>
+                    <label th:for="${questions[2].answer1}" th:text="${questions[2].answer1}"></label>
+                </li>
+                <li>
+                    <input type="radio" th:field="${quizAnswerDTO.simpleAnswers[2].answer}"
+                           th:value="${questions[2].answer2}"/>
+                    <label th:for="${questions[2].answer2}" th:text="${questions[2].answer2}"></label>
+                </li>
+                <li>
+                    <input type="radio" th:field="${quizAnswerDTO.simpleAnswers[2].answer}"
+                           th:value="${questions[2].answer3}"/>
+                    <label th:for="${questions[2].answer3}" th:text="${questions[2].answer3}"></label>
+                </li>
+                <li>
+                    <input type="radio" th:field="${quizAnswerDTO.simpleAnswers[2].answer}"
+                           th:value="${questions[2].answer4}"/>
+                    <label th:for="${questions[2].answer4}" th:text="${questions[2].answer4}"></label>
+                </li>
+            </ul>
+        </fieldset>
 
-    <fieldset>
-    <legend th:text="${questions[3].text}"></legend>
-    <ul>
-        <li>
-            <input type="radio" th:field="${quizAnswerDTO.simpleAnswers[3].answer}"
-                   th:value="${questions[3].answer1}"/>
-            <label th:for="${questions[3].answer1}" th:text="${questions[3].answer1}"></label>
-        </li>
-        <li>
-            <input type="radio" th:field="${quizAnswerDTO.simpleAnswers[3].answer}"
-                   th:value="${questions[3].answer2}"/>
-            <label th:for="${questions[3].answer2}" th:text="${questions[3].answer2}"></label>
-        </li>
-        <li>
-            <input type="radio" th:field="${quizAnswerDTO.simpleAnswers[3].answer}"
-                   th:value="${questions[3].answer3}"/>
-            <label th:for="${questions[3].answer3}" th:text="${questions[3].answer3}"></label>
-        </li>
-        <li>
-            <input type="radio" th:field="${quizAnswerDTO.simpleAnswers[3].answer}"
-                   th:value="${questions[3].answer4}"/>
-            <label th:for="${questions[3].answer4}" th:text="${questions[3].answer4}"></label>
-        </li>
-    </ul>
-    </fieldset>
+        <fieldset>
+            <legend th:text="${questions[3].text}"></legend>
+            <ul style="list-style-type: none;">
+                <li>
+                    <input type="radio" th:field="${quizAnswerDTO.simpleAnswers[3].answer}"
+                           th:value="${questions[3].answer1}"/>
+                    <label th:for="${questions[3].answer1}" th:text="${questions[3].answer1}"></label>
+                </li>
+                <li>
+                    <input type="radio" th:field="${quizAnswerDTO.simpleAnswers[3].answer}"
+                           th:value="${questions[3].answer2}"/>
+                    <label th:for="${questions[3].answer2}" th:text="${questions[3].answer2}"></label>
+                </li>
+                <li>
+                    <input type="radio" th:field="${quizAnswerDTO.simpleAnswers[3].answer}"
+                           th:value="${questions[3].answer3}"/>
+                    <label th:for="${questions[3].answer3}" th:text="${questions[3].answer3}"></label>
+                </li>
+                <li>
+                    <input type="radio" th:field="${quizAnswerDTO.simpleAnswers[3].answer}"
+                           th:value="${questions[3].answer4}"/>
+                    <label th:for="${questions[3].answer4}" th:text="${questions[3].answer4}"></label>
+                </li>
+            </ul>
+        </fieldset>
 
-    <fieldset>
-    <legend th:text="${questions[4].text}"></legend>
-    <ul>
-        <li>
-            <input type="radio" th:field="${quizAnswerDTO.simpleAnswers[4].answer}"
-                   th:value="${questions[4].answer1}"/>
-            <label th:for="${questions[4].answer1}" th:text="${questions[4].answer1}"></label>
-        </li>
-        <li>
-            <input type="radio" th:field="${quizAnswerDTO.simpleAnswers[4].answer}"
-                   th:value="${questions[4].answer2}"/>
-            <label th:for="${questions[4].answer2}" th:text="${questions[4].answer2}"></label>
-        </li>
-        <li>
-            <input type="radio" th:field="${quizAnswerDTO.simpleAnswers[4].answer}"
-                   th:value="${questions[4].answer3}"/>
-            <label th:for="${questions[4].answer3}" th:text="${questions[4].answer3}"></label>
-        </li>
-        <li>
-            <input type="radio" th:field="${quizAnswerDTO.simpleAnswers[4].answer}"
-                   th:value="${questions[4].answer4}"/>
-            <label th:for="${questions[4].answer4}" th:text="${questions[4].answer4}"></label>
-        </li>
-    </ul>
-    </fieldset>
+        <fieldset>
+            <legend th:text="${questions[4].text}"></legend>
+            <ul style="list-style-type: none;">
+                <li>
+                    <input type="radio" th:field="${quizAnswerDTO.simpleAnswers[4].answer}"
+                           th:value="${questions[4].answer1}"/>
+                    <label th:for="${questions[4].answer1}" th:text="${questions[4].answer1}"></label>
+                </li>
+                <li>
+                    <input type="radio" th:field="${quizAnswerDTO.simpleAnswers[4].answer}"
+                           th:value="${questions[4].answer2}"/>
+                    <label th:for="${questions[4].answer2}" th:text="${questions[4].answer2}"></label>
+                </li>
+                <li>
+                    <input type="radio" th:field="${quizAnswerDTO.simpleAnswers[4].answer}"
+                           th:value="${questions[4].answer3}"/>
+                    <label th:for="${questions[4].answer3}" th:text="${questions[4].answer3}"></label>
+                </li>
+                <li>
+                    <input type="radio" th:field="${quizAnswerDTO.simpleAnswers[4].answer}"
+                           th:value="${questions[4].answer4}"/>
+                    <label th:for="${questions[4].answer4}" th:text="${questions[4].answer4}"></label>
+                </li>
+            </ul>
+        </fieldset>
+        <button th:type="submit">Submit</button>
+        <button th:type="reset">Reset</button>
+    </form>
 
-
-<button th:type="submit" value="Submit"></button>
-    <button th:type="reset" value="Reset"></button>
-
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+            crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+            crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+            crossorigin="anonymous"></script>
     </body>
 </html>
