--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -2,64 +2,74 @@
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 
 
-
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+              integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+              crossorigin="anonymous">
 
         <title>Menu</title>
     </head>
 
 
-<body>
-<div th:fragment="header">
-    <nav class="navbar navbar-expand-lg navbar-light bg-dark">
-        <!-- Navbar content -->
+    <body>
 
-        <a class="navbar-brand" href="#" style="color: chartreuse">Learn Java</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link" th:href="@{/login}" style="color: deeppink;">Zaloguj<span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" th:href="@{/registration}" style="color: yellow;">Zarejestruj<span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" th:href="@{/quiz}" style="color: red;">Quiz</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" th:href="@{/books}" style="color: lightskyblue;">Książki</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" th:href="@{/blogs}" style="color: orange">Linki</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" style="color: white" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Menu rozwijane
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">Zaloguj</a>
-                        <a class="dropdown-item" href="#">Zarejestruj</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Quiz</a>
-                        <a class="dropdown-item" href="#">Książki</a>
-                        <a class="dropdown-item" href="#">Blogi</a>
-                    </div>
-                </li>
+    <th:block th:include="header::header"></th:block>
 
-            </ul>
+    <div th:fragment="header">
+        <nav class="navbar navbar-expand-lg navbar-light bg-dark">
+            <!-- Navbar content -->
+            <a class="navbar-brand" th:href="@{/}" style="color: chartreuse">Learn Java</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item active">
+                        <a class="nav-link" th:href="@{/login}" style="color: deeppink;">Zaloguj<span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" th:href="@{/registration}" style="color: yellow;">Zarejestruj<span
+                                class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" th:href="@{/quiz}" style="color: red;">Quiz</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" th:href="@{/books}" style="color: lightskyblue;">Książki</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" th:href="@{/blogs}" style="color: orange">Linki</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" style="color: white" id="navbarDropdown"
+                           role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Menu rozwijane
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" th:href="@{/login}">Zaloguj</a>
+                            <a class="dropdown-item" th:href="@{/registration}">Zarejestruj</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" th:href="@{/quiz}">Quiz</a>
+                            <a class="dropdown-item" th:href="@{/books}">Książki</a>
+                            <a class="dropdown-item" th:href="@{/blogs}">Blogi</a>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </div>
 
-        </div>
-    </nav>
-</div>
-
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-</body>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+            crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+            crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+            crossorigin="anonymous"></script>
+    </body>
 </html>
