--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,57 +4,17 @@
       layout:decorate="layout/layout"
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       xsi:schemaLocation="http://www.ultraq.net.nz/thymeleaf/layout ">
-    <head>
-        <meta charset="UTF-8">
-        <title>Books</title>
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-              integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-              crossorigin="anonymous">
-    </head>
-    <body>
-
-    <th:block th:include="header::header"></th:block>
-    <div class="container">
-
-        <div class="row">
-            <div class="col-md-6 offset-md-3">
-                <form>
-                    <div class="form-group">
-                        <label for="login"> User Name : </label>
-                        <input type="text" class="form-control"  name="login" id="login" aria-describedby="emailHelp" placeholder="Login">
-                    </div>
-                    <div class="form-group">
-                        <label for="password"> Password : </label>
-                        <input type="password" class="form-control" id="password" placeholder="Password">
-                    </div>
-
-
-                    <button type="submit" class="btn btn-primary">Submit</button>
-                </form>
-
-
-            </div>
-        </div>
-
-
-
-
-
-            </div>
-        </div>
-
-
-
-    </div>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-            crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-            crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-            crossorigin="anonymous"></script>
-
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <title>Login</title>
+</head>
+<body>
+<form th:action="@{/login}" method="post">
+    <div><label> User Name : <input type="text" id="login"
+                                    name="login" placeholder="Login"/> </label></div>
+    <div><label> Password: <input type="password" id="password" name="password"
+                                  placeholder="Password"/> </label></div>
+    <div><input type="submit" value="Sign In"/></div>
+</form>
+</body>
 </html>
