--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -51,6 +51,7 @@
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item" th:href="@{/login}">Zaloguj</a>
                             <a class="dropdown-item" th:href="@{/registration}">Zarejestruj</a>
+                            <a class="dropdown-item" th:href="@{/logout}">Wyloguj</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" th:href="@{/quiz}">Quiz</a>
                             <a class="dropdown-item" th:href="@{/books}">Książki</a>
