--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml" xmlns:sec="http://www.w3.org/1999/xhtml">
 
 
     <head>
@@ -27,13 +27,17 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
+                    <div sec:authorize="!isAuthenticated()">
                     <li class="nav-item active">
                         <a class="nav-link" th:href="@{/login}" style="color: deeppink;">Zaloguj<span class="sr-only">(current)</span></a>
                     </li>
+                    </div>
+                    <div sec:authorize="!isAuthenticated()">
                     <li class="nav-item active">
                         <a class="nav-link" th:href="@{/registration}" style="color: yellow;">Zarejestruj<span
                                 class="sr-only">(current)</span></a>
                     </li>
+                    </div>
                     <li class="nav-item">
                         <a class="nav-link" th:href="@{/quiz}" style="color: red;">Quiz</a>
                     </li>
@@ -43,6 +47,11 @@
                     <li class="nav-item">
                         <a class="nav-link" th:href="@{/blogs}" style="color: orange">Linki</a>
                     </li>
+
+                </ul>
+            </div>
+            <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
+                <ul class="navbar-nav ml-auto">
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" style="color: white" id="navbarDropdown"
                            role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
